fixed invite bug. added scrollbars for overflow (not much use on touch devices since Hammer intercepts the events, but t mitigatesgliness)

--- a/assets/styles/bighouse/bighouse.css
+++ b/assets/styles/bighouse/bighouse.css
@@ -270,6 +270,7 @@ body {
     box-sizing: border-box;
     cursor: pointer;
     padding: 4px;
+    overflow-y: auto;
 }
 
 /* ensure nth-child is less specific than topcard,
